import "EventId.proto";
option java_outer_classname="ItemRemovedEventResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message ItemRemovedEventResponse 
{
	optional bytes key = 1;
	optional int32 itemRemoveReason = 2;
	optional int32 flag = 3;
	repeated bytes value = 4;
	optional EventId eventId = 5;
}